[gd_scene load_steps=7 format=2]

[ext_resource path="res://content/icons/large_unknown.png" type="Texture" id=1]
[ext_resource path="res://stages/loadout/LoadoutOption.gd" type="Script" id=2]
[ext_resource path="res://gui/theme.tres" type="Theme" id=3]
[ext_resource path="res://gui/buttons/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=5]
[ext_resource path="res://gui/buttons/button_focus_expand_beyond_parent.tres" type="StyleBox" id=6]

[node name="LoadoutOption" type="PanelContainer"]
margin_left = 300.0
margin_top = 180.0
margin_right = 620.0
margin_bottom = 417.0
rect_min_size = Vector2( 500, 0 )
focus_mode = 2
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 484.0
margin_bottom = 295.0
mouse_filter = 2
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 456.0
margin_bottom = 267.0
rect_min_size = Vector2( 350, 0 )
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 444.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Romantik"
align = 1

[node name="IconRect" type="TextureRect" parent="MarginContainer/VBoxContainer" groups=["unstyled"]]
margin_top = 53.0
margin_right = 444.0
margin_bottom = 213.0
rect_min_size = Vector2( 280, 160 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 444.0
margin_bottom = 255.0
mouse_filter = 2
bbcode_enabled = true
fit_content_height = true

[node name="SelectedPanel" type="Panel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 484.0
margin_bottom = 295.0
custom_styles/panel = ExtResource( 6 )

[connection signal="focus_entered" from="." to="." method="_on_LoadoutOption_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LoadoutOption_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_LoadoutOption_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LoadoutOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LoadoutOption_mouse_exited"]
